# NuRadioMC

./: README.md  changelog.txt  pyproject.toml
.github/workflows/: publish-to-test-pypi.yml
NuRadioMC/: __init__.py
NuRadioMC/EvtGen/: NuRadioProposal.py  config_PROPOSAL.json.sample  config_PROPOSAL_greenland.json.sample  config_PROPOSAL_infice.json.sample  config_PROPOSAL_mooresbay.json.sample  generator.py
NuRadioMC/SignalProp/: analyticraytracing.py
NuRadioMC/examples/02_DnR/: A01analyse_simulation.py
NuRadioMC/examples/07_crash_course/03_processing/: greenland_100m_alias.json
NuRadioMC/simulation/: T04visualize_sim_input.py  T05visualize_sim_output.py  simulation.py
NuRadioMC/test/SingleEvents/: T02RunSimulation.py  validate.sh
NuRadioMC/utilities/: Veff.py  medium.py  plotting.py
NuRadioReco/: __init__.py
NuRadioReco/detector/: antenna_models_hash.json
NuRadioReco/examples/cr_efficiency_analysis/: 4_air_shower_reconstruction.py
NuRadioReco/modules/: channelBandPassFilter.py  channelGenericNoiseAdder.py
NuRadioReco/modules/io/coreas/: readCoREASStation.py  readCoREASStationGrid.py
NuRadioReco/modules/trigger/: highLowThreshold.py  powerIntegration.py
