[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[metadata]
long_description_content_type='text/plain'

[tool.flit.metadata]
module = "NuRadioMC"
author = "Christian Glaser"
author-email = "work@c-glaser.de"
home-page = "https://github.com/nu-radio/NuRadioMC"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

packages = [
    { include = "NuRadioMC" },
    { include = "NuRadioReco" },
]

requires = [
	"numpy",
	"scipy",
    "tinydb>=4.1.1",
    "tinydb-serialization",
    "aenum",
    "astropy",
    "radiotools >=0.2.0",
    "h5py",
    "pyyaml",
    "cython",
    "peakutils",
    "requests",
    "pymongo",
    "dash",
    "plotly",
    "sphinx"
]
requires-python=">=3.6"

[tool.flit.metadata.requires-extra]
doc = ["sphinx"]
